# CPPYouTube2MP3

./: CMakeLists.txt  README.md
.cache/clangd/index/: CPPYouTube2MP3.cpp.23615C53CD5D638C.idx
src/: CMakeLists.txt
